# BME-Medical-Informatics-course

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt
covid_xml/: covid19.ipynb
dicom/: brain.dcm  dicom-tests.ipynb
hl7v2/: sample.hl7
