[project]
name = "bme-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydicom>=3.0.2",
    "pynetdicom>=3.0.4",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
]
